--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21
-loader_version=0.15.11
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
 # Mod Properties
 mod_version=1.6.0
 maven_group=net.camotoy
 archives_base_name=BedrockSkinUtility
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.100.3+1.21
+fabric_version=0.129.0+1.21.8
